== 0.3.6 2009-09-14

* Added -B CLI option to use the :body authentication scheme (Seth)
* Respect `--method` in `authorize` CLI command (Seth)
* Support POST and PUT with raw bodies (Yu-Shan Fung et al)
* Test clean-up (Xavier Shay, Hannes Tydén)
* Added :ca_file consumer option to allow consumer specific certificate
  override. (Pelle)

== 0.3.5 2009-06-03

* `query` CLI command to access protected resources (Seth)
* Added -H, -Q CLI options for specifying the authentication scheme (Seth)
* Added -O CLI option for specifying a file containing options (Seth)
* Support streamable body contents for large request bodies (Seth Cousins)
* Support for OAuth 1.0a (Seth)
* Added proxy support to OAuth::Consumer (Marshall Huss)
* Added --scope CLI option for Google's 'scope' parameter (Seth)

== 0.3.4 2009-05-06

* OAuth::Client::Helper uses OAuth::VERSION (chadisfaction)
* Fix OAuth::RequestProxy::ActionControllerRequest's handling of params
  (Tristan Groléat)

== 0.3.3 2009-05-04

* Corrected OAuth XMPP namespace (Seth)
* Improved error handling for invalid Authorization headers (Matt Sanford)
* Fixed signatures for non-ASCII under $KCODE other than 'u' (Matt Sanford)
* Fixed edge cases in ActionControllerRequestProxy where params were being
  incorrectly signed (Marcos Wright Kuhns)
* Support for arguments in OAuth::Consumer#get_access_token (Matt Sanford)
* Add gem version to user-agent header (Matt Sanford)
* Handle input from aggressive form encoding libraries (Matt Wood)

== 0.3.2 2009-03-23

* 2xx statuses should be treated as success (Anders Conbere)
* Support applications using the MethodOverride Rack middleware (László Bácsi)
* `authorize` command for `oauth` CLI (Seth)
* Initial support for Problem Reporting extension (Seth)
* Verify SSL certificates if CA certificates are available (Seth)
* Fixed ActionController parameter escaping behavior (Thiago Arrais, László
  Bácsi, Brett Gibson, et al)