@@ -189,8 +189,8 @@ module OAuth
         # TODO this could be considered unexpected behavior; symbols or not?
         # TODO this also drops subsequent values from multi-valued keys
         CGI.parse(response.body).inject({}) do |h,(k,v)|
-          h[k.to_sym] = v.first
-          h[k]        = v.first
+          h[k.strip.to_sym] = v.first
+          h[k.strip]        = v.first
           h
         end
       when (300..399)
