@@ -6,6 +6,7 @@
 * Test clean-up (Xavier Shay, Hannes Tydén)
 * Added :ca_file consumer option to allow consumer specific certificate
   override. (Pelle)
+* Added a secure_equals in Helper to prevent timing attacks. (Pelle)
 
 == 0.3.5 2009-06-03
 
